--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Digi Hub</title>
+    <!-- Bootstrap Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="style.css">
   </head>
-  <body class="container">
-    <section class="navigation">
-        <nav class="navbar navbar-expand-lg">
+  <body>
+
+    <header class="container">
+
+        <!-- Navigation Bar Start -->
+
+    <section class="navigation my-5">
+        <nav class="navbar navbar-expand-lg fixed-top bg-white">
             <div class="container">
               <a class="navbar-brand fs-3 fw-bold" href="#">Digi Hub</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
@@ -35,11 +43,54 @@
                   </li>
                 </ul>
               </div>
-              <a href="#" class="nav-link fs-6 fw-semibold btn btn-outline-info px-4 py-2 ">Register</a>
+              <a href="#" class="nav-link fs-6 fw-semibold btn btn-outline-primary px-4 py-2 ">Register</a>
             </div>
           </nav>
+    </section>
+    <!-- Navigation Bar End -->
+
+
+    <!-- Carousel Start -->
+    <section class="slider my-5">
+        <div id="carouselExampleControls" class="carousel slide " data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-sm-block">
+                  <h1>Get Started Digital Learning</h1>
+                  <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+                  <button class="btn btn-primary">Get Started</button>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-sm-block">
+                  <h1>Get Started Digital Learning</h1>
+                  <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+                  <button class="btn btn-primary">Get Started</button>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-sm-block">
+                  <h1>Get Started Digital Learning</h1>
+                  <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+                  <button class="btn btn-primary">Get Started</button>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
 
     </section>
+</header>
     
     
 
