--- a/index.html
+++ b/index.html
@@ -200,7 +200,44 @@
         readable content of a page when looking at its layout.</p>
     </div>
     <div class>
-      <button class="btn bg-white text-primary fs-4 fw-semibold">Register Now</button>
+
+      <button type="button" class="btn bg-white text-primary fs-4 fw-semibold" data-bs-toggle="modal" data-bs-target="#register" data-bs-whatever="@mdo">Register Now</button>
+
+<div class="modal fade" id="register" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="register">Register Now</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Name:</label>
+            <input type="text" class="form-control" id="recipient-name" required>
+          </div>
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Email:</label>
+            <input type="email" class="form-control" id="recipient-name" required>
+          </div>
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Create Password</label>
+            <input type="password" class="form-control" id="recipient-name" required>
+          </div>
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Confirm Password</label>
+            <input type="password" class="form-control" id="recipient-name" required>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Reset</button>
+        <button type="button" class="btn btn-primary">Submit</button>
+      </div>
+    </div>
+  </div>
+</div>
+
     </div></div>
    
   </section>
