accordation part complete

--- a/index.html
+++ b/index.html
@@ -199,8 +199,9 @@
       <p>It is a long established fact that a reader will be distracted by the <br> 
         readable content of a page when looking at its layout.</p>
     </div>
-    <div class>
 
+ <!-- modal start  -->
+    <div>
       <button type="button" class="btn bg-white text-primary fs-4 fw-semibold" data-bs-toggle="modal" data-bs-target="#register" data-bs-whatever="@mdo">Register Now</button>
 
 <div class="modal fade" id="register" tabindex="-1" aria-hidden="true">
@@ -237,10 +238,75 @@
     </div>
   </div>
 </div>
-
     </div></div>
    
   </section>
+  <!-- Ready to join section End  -->
+
+  <!-- Frequently Asked Questions section Start -->
+  <section class="my-5">
+    <div class="text-center mb-5">
+      <h1 class="fw-bold">Freaquently Asked Questions</h1>
+      <p>It is a long established fact that a reader will be distracted by the readable<br> 
+        content of a page when looking at its layout.</p>
+    </div>
+    <div class="accordion" id="accordionExample">
+      <div class="accordion-item mb-3">
+        <h2 class="accordion-header" id="headingOne">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            What are the differences between CSS Grid and CSS Flexbox ?
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <p><strong>CSS Grid Layout,</strong>  is a two-dimensional grid-based layout system with rows and columns, making it easier to design web pages without having to use floats and positioning.Like tables, grid layout allow us to align elements into columns and rows. <br>
+             <strong>CSS Flexbox</strong> offers a one-dimensional layout. It is helpful in allocating and aligning the space among items in a container (made of grids). It works with all kinds of display devices and screen sizes.</p>
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item mb-3">
+        <h2 class="accordion-header" id="headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+          What are the differences between Bootstrap and Tailwind ?
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <p><strong>Bootstrap</strong> as "Simple and flexible HTML, CSS, and JS for popular UI components and interactions". Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile first projects on the web. <br> On the other hand, <strong> Tailwind CSS</strong> is detailed as "A utility-first CSS framework for rapid UI development". Tailwind is different from frameworks like Bootstrap, Foundation, or Bulma in that it's not a UI kit. It doesn't have a default theme, and there are no build-in UI components. It comes with a menu of predesigned widgets to build your site with, but doesn't impose design decisions that are difficult to undo.</p>
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item mb-3">
+        <h2 class="accordion-header" id="headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            What is CSS Box Model ?
+          </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <p>In CSS, the term <strong>"box model"</strong>  is used when talking about design and layout.
+
+              <strong>The CSS box model</strong> is essentially a box that wraps around every HTML element. It consists of: margins, borders, padding, and the actual content.</p>
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingFour">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+            What is Semantic Tag?
+          </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            A semantic element clearly describes its meaning to both the browser and the developer.
+            Examples of non-semantic elements: <div> and <span> - Tells nothing about its content.
+            Examples of semantic elements: &lt;form&gt;, &lt;table&gt;, and &lt;article&gt;- Clearly defines its content.
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 </main>
     
