--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
             What is Semantic Tag?
           </button>
         </h2>
-        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
           <div class="accordion-body">
             A semantic element clearly describes its meaning to both the browser and the developer.
             Examples of non-semantic elements: <div> and <span> - Tells nothing about its content.
@@ -306,18 +306,35 @@
       </div>
     </div>
   </section>
+<!-- Companies Trusted by  -->
+  <section class="my-5 d-lg-block d-xl-block d-md-none d-sm-none d-none">
+    <div class="text-center">
+      <h1 class="fw-bold">Trusted by over 800+ companies</h1>
+      <div class="mt-5 mb-5"> 
+        <img class="me-5" src="images/company/company-1.png" alt="">
+        <img class="me-5" src="images/company/company-2.png" alt="">
+        <img class="me-5" src="images/company/company-3.png" alt="">
+        <img class="me-5" src="images/company/company-4.png" alt="">
+        <img class="me-5" src="images/company/company-5.png" alt="">
+        <img class="me-5" src="images/company/company-6.png" alt="">
+      </div>
+     
+    </div>
+
+
+  </section>
 
 
 </main>
     <footer class="bg-dark py-5">
       <div class="text-center text-white ">
         <h1 class="fw-bold">DIGI HUB</h1>
-        <p>Office 41, West Bengal, India <br> Hussain Ali <br> Privacy policy | Terms & condition</p>
+        <p>Office 41, West Bengal, India <br> Hussain Ali <br><a class="text-decoration-none text-white" href="">Privacy policy</a> | <a href="" class="text-decoration-none text-white">Terms & condition</a> </p>
       </div>
       <div class=" text-center">
-        <a href=""> <img src="images/social-icons/facebook.svg" alt=""></a>
-        <a href=""> <img src="images/social-icons/twitter.svg" alt=""></a>
-        <a href=""> <img src="images/social-icons/icons8-whatsapp.svg" alt=""></a>
+        <a class="me-2" href=""> <img src="images/social-icons/facebook.svg" alt=""></a>
+        <a class="me-2" href=""> <img src="images/social-icons/twitter.svg" alt=""></a>
+        <a class="me-2" href=""> <img src="images/social-icons/icons8-whatsapp.svg" alt=""></a>
         <a href=""> <img src="images/social-icons/tiktok.svg" alt=""></a>
        
       </div>
