add explore e-learning section

--- a/index.html
+++ b/index.html
@@ -191,6 +191,39 @@
   </div>
   <!-- Courses End  -->
 
+<!-- Explore E-Learning section start  -->
+<section class="e-learning my-5">
+  <div class=" d-lg-flex d-xl-flex d-md-flex d-sm-flex-wrap shadow-sm ">
+  <div class="">
+    <img class="img-fluid" src="images/working.png" alt="">
+  </div>
+  <div class="bg-white-50 d-flex justify-content-center align-items-center">
+  <div class="ps-5">
+    <h1 class="fw-bold">Explore The E-Learning<br>
+      Institute</h1>
+      <p>There are many variations of passages of Lorem Ipsum available, but the 
+        majority have suffered alteration in some form, by injected humour, or 
+        randomised words which don't look even slightly believable. If you are going 
+        to use a passage of Lorem Ipsum, you need to be sure.</p>
+        
+        
+        <p>Anything embarrassing hidden in the middle of text. All the Lorem Ipsum 
+        generators on the Internet tend to repeat predefined.</p>
+        <div class="d-flex">
+          <p class="me-5"><span class="h1 fw-bold">3.2K+</span><br>
+          Online Courses</p>
+          <p class="me-5"><span class="h1 fw-bold">600+</span><br>
+          Expert Members</p>
+          <p><span class="h1 fw-bold">1M+</span><br>
+          Rating and Reviews</p>
+        </div>
+        <button type="button" class="btn bg-primary text-white fs-6 px-3 py-2 fw-semibold">Read More</button>
+  </div>
+  </div>
+  </div>
+
+</section>
+
   <!-- Ready to Join Section Start  -->
   <section class=" bg-primary rounded-3 mt-5">
     <div class="d-flex py-5 justify-content-center align-items-center"> 
