add successful student section

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 <!-- Explore E-Learning section start  -->
 <section class="e-learning my-5">
   <div class=" d-lg-flex d-xl-flex d-md-flex d-sm-flex-wrap shadow-sm ">
-  <div class="">
+  <div>
     <img class="img-fluid" src="images/working.png" alt="">
   </div>
   <div class="bg-white-50 d-flex justify-content-center align-items-center">
@@ -235,7 +235,7 @@
 
  <!-- modal start  -->
     <div>
-      <button type="button" class="btn bg-white text-primary fs-4 fw-semibold" data-bs-toggle="modal" data-bs-target="#register" data-bs-whatever="@mdo">Register Now</button>
+      <button type="button" class="btn bg-white text-primary fs-5 fw-semibold" data-bs-toggle="modal" data-bs-target="#register" data-bs-whatever="@mdo">Register Now</button>
 
 <div class="modal fade" id="register" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog">
@@ -275,6 +275,40 @@
    
   </section>
   <!-- Ready to join section End  -->
+
+  <!-- successful-students -->
+
+  <section class=" my-5 successful-students">
+    <div>
+      <h1>Meet Our Successful Students</h1>
+      <p>These are the top successful students of this year 2022</p>
+    </div>
+    <div class="d-lg-flex d-md-flex-wrap d-sm-flex-wrap ">
+      <div class="shadow-sm me-3"><img src="images/student/student-1.png" alt="">
+        <h4>Awlad Hossain</h4>
+          <p>UIUX Designer</p></div>
+      <div class="shadow-sm me-3"> <img src="images/student/student-2.png" alt="">
+        <h4>Jannatul Islam</h4>
+          <p>Motion Design</p></div>
+      <div class="shadow-sm me-3"> <img src="images/student/student-3.png" alt="">
+        <h4>Imran Hossain</h4>
+          <p>Graphic Designer</p></div>
+      <div class="shadow-sm"> <img src="images/student/student-4.png" alt="">
+        <h4>Nishi Akter</h4>
+          <p>Web Developer</p></div>
+    </div>
+    <div class="mt-4 d-flex justify-content-center">
+      <button type="button" class= "btn bg-primary text-white fs-6 px-3 py-2 fw-semibold">View All</button></div>
+  </section>
+
+  <!-- Students Feedback -->
+  <section class="py-5">
+    <div class="text-center">
+      <h1 class="fw-bold">Some Students Feedback</h1>
+      <p>it is a long established fact that a reader will be distracted by the readable 
+        content of a page when looking at its layout.</p>
+    </div>
+  </section>
 
   <!-- Frequently Asked Questions section Start -->
   <section class="my-5">
