--- a/index.html
+++ b/index.html
@@ -292,22 +292,23 @@
       <div class="col-lg-3 col-md-6 col-sm-12">
        <div class="pb-2 shadow-sm">
         <img class="img-fluid" src="images/student/student-2.png" alt="">
-        <h5>Awlad Hossain</h5>
-        <p>UIUX Designer</p>
+        <h5>Jannatul Islam</h5>
+        <p>Motion Design</p>
        </div>
       </div>
       <div class="col-lg-3 col-md-6 col-sm-12">
        <div class="pb-2 shadow-sm">
         <img class="img-fluid" src="images/student/student-3.png" alt="">
-        <h5>Awlad Hossain</h5>
-        <p>UIUX Designer</p>
+        <h5>Imran Hossain
+          </h5>
+        <p>Graphic Designer</p>
        </div>
       </div class="shadow-sm">
       <div class="col-lg-3 col-md-6 col-sm-12">
        <div class="pb-2 shadow-sm">
         <img class="img-fluid" src="images/student/student-4.png" alt="">
-        <h5>Awlad Hossain</h5>
-        <p>UIUX Designer</p>
+        <h5>Nishi Akter</h5>
+        <p>Web Developer</p>
        </div>
       </div>
     </div>
@@ -536,9 +537,9 @@
     </div>
   </section>
   <!-- Companies Trusted by Start  -->
-
-
 </main>
+
+<!-- Footer part Start  -->
     <footer class="bg-dark py-5">
       <div class="text-center text-white ">
         <h1 class="fw-bold">DIGI HUB</h1>
