--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+              <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+                <div></div>
                 <ul class="navbar-nav">
                   <li class="nav-item me-4">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -42,8 +43,10 @@
                     <a class="nav-link" href="#">Contact</a>
                   </li>
                 </ul>
+                <div><a href="#" class="nav-link fs-6 fw-semibold btn btn-outline-primary px-3 py-2 ">Register</a>
+                </div>
               </div>
-              <a href="#" class="nav-link fs-6 fw-semibold btn btn-outline-primary px-4 py-2 ">Register</a>
+              
             </div>
           </nav>
     </section>
@@ -52,27 +55,27 @@
 
     <!-- Carousel Start -->
     <section class="slider my-5">
-        <div id="carouselExampleControls" class="carousel slide " data-bs-ride="carousel">
+        <div id="carouselExampleControls" class="carousel slide my-slider " data-bs-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item first-caro active">
-                <img src="images/cover/cover-1.png" class="img-fluid d-block w-100" alt="...">
-                <div class="carousel-caption">
+              <div class="carousel-item first-caro active my-carousel">
+                <img src="images/cover/cover-1.png" class="img-fluid d-block" alt="...">
+                <div class="carousel-caption my-caption d-block">
                   <h1>Get Started Digital Learning</h1>
                   <p>digital learning is the digitalisation of the entire learning experience.</p>
                   <button class="btn btn-primary">Get Started</button>
                 </div>
               </div>
-              <div class="carousel-item first-caro">
-                <img src="images/cover/cover-2.jpg" class="img-fluid d-block w-100" alt="...">
-                <div class="carousel-caption">
+              <div class="carousel-item first-caro my-carousel">
+                <img src="images/cover/cover-2.png" class="img-fluid d-block" alt="...">
+                <div class="carousel-caption my-caption d-block">
                   <h1>Get Started Digital Learning</h1>
                   <p>digital learning is the digitalisation of the entire learning experience.</p>
                   <button class="btn btn-primary">Get Started</button>
                 </div>
               </div>
-              <div class="carousel-item first-caro">
-                <img src="images/cover/cover-3.jpg" class="img-fluid d-block w-100" alt="...">
-                <div class="carousel-caption">
+              <div class="carousel-item first-caro my-carousel">
+                <img src="images/cover/cover-3.jpg" class="img-fluid d-block" alt="...">
+                <div class="carousel-caption my-caption d-block">
                   <h1>Get Started Digital Learning</h1>
                   <p>digital learning is the digitalisation of the entire learning experience.</p>
                   <button class="btn btn-primary">Get Started</button>
